--- a/Depo/Depo/Presentation/UserStories/Settings/TermsAndPolicy/View/TermsAndPolicyViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/TermsAndPolicy/View/TermsAndPolicyViewController.xib
@@ -1,43 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="TermsAndPolicyViewController" customModule="Billo" customModuleProvider="target">
-            <connections>
-                <outlet property="tableView" destination="j76-Nl-FeN" id="IcI-X5-YD2"/>
-                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
-            </connections>
-        </placeholder>
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT" customClass="TermsAndPolicyViewController" customModule="Billo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="144"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="64" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="j76-Nl-FeN">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="kkL-bU-lPc">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="144"/>
                     <color key="backgroundColor" name="primaryBackground"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="144" id="zDe-Wg-2At"/>
+                    </constraints>
                     <connections>
-                        <outlet property="dataSource" destination="-1" id="sl4-vp-tfJ"/>
-                        <outlet property="delegate" destination="-1" id="b9A-cV-PKc"/>
+                        <outlet property="dataSource" destination="i5M-Pr-FkT" id="j1x-1E-4L4"/>
+                        <outlet property="delegate" destination="i5M-Pr-FkT" id="RIS-ja-6lW"/>
                     </connections>
                 </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="j76-Nl-FeN" secondAttribute="trailing" id="Lqv-QO-1pO"/>
-                <constraint firstItem="j76-Nl-FeN" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="QY3-uq-1M8"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="j76-Nl-FeN" secondAttribute="bottom" id="chk-BN-ywi"/>
-                <constraint firstItem="j76-Nl-FeN" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="wah-Xi-7Nz"/>
+                <constraint firstItem="kkL-bU-lPc" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="GNh-Lm-0DN"/>
+                <constraint firstItem="kkL-bU-lPc" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" id="XdU-oq-lAc"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="kkL-bU-lPc" secondAttribute="bottom" id="Yqj-od-2fY"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="kkL-bU-lPc" secondAttribute="trailing" id="pD0-Aj-yjp"/>
             </constraints>
-            <point key="canvasLocation" x="71" y="113"/>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="tableView" destination="kkL-bU-lPc" id="U4y-F7-p1o"/>
+            </connections>
+            <point key="canvasLocation" x="88.799999999999997" y="-145.72713643178412"/>
         </view>
     </objects>
     <resources>
