--- a/Depo/Depo/Presentation/UserStories/Start/Registration/View/RegistrationScreen.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/Registration/View/RegistrationScreen.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -34,10 +34,10 @@
                     <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LQn-yz-ygb" userLabel="Container View">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="711.5"/>
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="707"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="110" placeholderIntrinsicHeight="0.0" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="JO9-w0-uO5" userLabel="Alerts Stack View">
-                                    <rect key="frame" x="16" y="0.0" width="382" height="107.5"/>
+                                    <rect key="frame" x="16" y="0.0" width="382" height="102"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aKJ-Fa-ngJ">
                                             <rect key="frame" x="0.0" y="0.0" width="382" height="0.0"/>
@@ -47,22 +47,22 @@
                                             </constraints>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Qf-md-ArO" customClass="SupportFormBannerView" customModule="Billo" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="382" height="57.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="382" height="52"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="751" text="If you are having difficulty signing up, contact us for support." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="u2O-pt-zlI">
-                                                    <rect key="frame" x="12" y="10" width="269.5" height="37.5"/>
+                                                    <rect key="frame" x="12" y="10" width="289.5" height="32"/>
                                                     <fontDescription key="fontDescription" name="TurkcellSaturaDem" family="TurkcellSaturaDem" pointSize="16"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="question_symbol" translatesAutoresizingMaskIntoConstraints="NO" id="bAt-XL-x2l">
-                                                    <rect key="frame" x="307" y="7" width="29" height="51.5"/>
+                                                    <rect key="frame" x="309.5" y="6" width="26.5" height="47"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" secondItem="bAt-XL-x2l" secondAttribute="height" multiplier="31:55" id="cj1-uU-dgT"/>
                                                     </constraints>
                                                 </imageView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="751" image="chevronLeft" translatesAutoresizingMaskIntoConstraints="NO" id="uOk-WB-qNa">
-                                                    <rect key="frame" x="346" y="24.5" width="16" height="9"/>
+                                                    <rect key="frame" x="346" y="21.5" width="16" height="9"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="9" id="u5I-eb-m3d"/>
                                                     </constraints>
@@ -86,20 +86,20 @@
                                             </connections>
                                         </view>
                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="w1M-wl-mXs" customClass="ErrorBannerView" customModule="Billo" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="57.5" width="382" height="50"/>
+                                            <rect key="frame" x="0.0" y="52" width="382" height="50"/>
                                             <color key="backgroundColor" name="primaryBackground"/>
                                         </view>
                                     </subviews>
                                 </stackView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bVV-xV-h3m">
-                                    <rect key="frame" x="0.0" y="123.5" width="414" height="400"/>
+                                    <rect key="frame" x="0.0" y="118" width="414" height="400"/>
                                     <color key="backgroundColor" name="primaryBackground"/>
                                 </view>
                                 <stackView opaque="NO" contentMode="scaleToFill" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="400" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="P2f-Nq-OPJ">
-                                    <rect key="frame" x="20" y="123.5" width="374" height="400"/>
+                                    <rect key="frame" x="20" y="118" width="374" height="400"/>
                                 </stackView>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="94P-4Q-I5x">
-                                    <rect key="frame" x="20" y="547.5" width="374" height="72"/>
+                                    <rect key="frame" x="20" y="542" width="374" height="72"/>
                                     <subviews>
                                         <view contentMode="scaleToFill" placeholderIntrinsicWidth="375" placeholderIntrinsicHeight="72" translatesAutoresizingMaskIntoConstraints="NO" id="lBm-t6-08H" customClass="CaptchaView" customModule="Billo" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="374" height="72"/>
@@ -107,9 +107,9 @@
                                     </subviews>
                                 </stackView>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Iei-Qg-JRc" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
-                                    <rect key="frame" x="93" y="643.5" width="228" height="44"/>
+                                    <rect key="frame" x="24" y="638" width="366" height="45"/>
                                     <constraints>
-                                        <constraint firstAttribute="height" constant="44" id="hPb-59-wQd"/>
+                                        <constraint firstAttribute="height" constant="45" id="hPb-59-wQd"/>
                                     </constraints>
                                     <state key="normal" title="Button"/>
                                     <connections>
@@ -127,15 +127,23 @@
                                 <constraint firstItem="94P-4Q-I5x" firstAttribute="top" secondItem="P2f-Nq-OPJ" secondAttribute="bottom" constant="24" id="Kgq-3h-C0K"/>
                                 <constraint firstItem="JO9-w0-uO5" firstAttribute="leading" secondItem="LQn-yz-ygb" secondAttribute="leading" constant="16" id="Kpv-94-asx"/>
                                 <constraint firstAttribute="bottom" secondItem="Iei-Qg-JRc" secondAttribute="bottom" constant="24" id="Pcd-TK-dKr"/>
+                                <constraint firstItem="Iei-Qg-JRc" firstAttribute="leading" secondItem="LQn-yz-ygb" secondAttribute="leading" constant="24" id="WyW-pq-XNK"/>
                                 <constraint firstItem="JO9-w0-uO5" firstAttribute="top" secondItem="LQn-yz-ygb" secondAttribute="top" id="Xuz-df-Jsy"/>
                                 <constraint firstItem="bVV-xV-h3m" firstAttribute="centerX" secondItem="LQn-yz-ygb" secondAttribute="centerX" id="aLc-E9-q9Y"/>
                                 <constraint firstItem="bVV-xV-h3m" firstAttribute="width" secondItem="LQn-yz-ygb" secondAttribute="width" id="f3r-Hq-gx6"/>
                                 <constraint firstItem="94P-4Q-I5x" firstAttribute="leading" secondItem="LQn-yz-ygb" secondAttribute="leading" constant="20" id="hrY-KR-UCC"/>
                                 <constraint firstItem="P2f-Nq-OPJ" firstAttribute="top" secondItem="JO9-w0-uO5" secondAttribute="bottom" constant="16" id="mfp-d3-9wY"/>
                                 <constraint firstItem="Iei-Qg-JRc" firstAttribute="width" secondItem="LQn-yz-ygb" secondAttribute="width" multiplier="0.55" id="n2f-DD-ajh"/>
+                                <constraint firstAttribute="trailing" secondItem="Iei-Qg-JRc" secondAttribute="trailing" constant="24" id="od3-ql-63x"/>
                                 <constraint firstItem="Iei-Qg-JRc" firstAttribute="centerX" secondItem="LQn-yz-ygb" secondAttribute="centerX" id="s1E-Z6-Wdu"/>
                                 <constraint firstItem="P2f-Nq-OPJ" firstAttribute="top" secondItem="bVV-xV-h3m" secondAttribute="top" id="ycU-I7-v3n"/>
                             </constraints>
+                            <variation key="default">
+                                <mask key="constraints">
+                                    <exclude reference="n2f-DD-ajh"/>
+                                    <exclude reference="s1E-Z6-Wdu"/>
+                                </mask>
+                            </variation>
                         </view>
                     </subviews>
                     <constraints>
