--- a/Depo/Depo/Presentation/UserStories/Start/Registration/View/Terms/RegistrationTermsInfoViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/Registration/View/Terms/RegistrationTermsInfoViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -18,6 +18,7 @@
                 <outlet property="popupHeightConstraint" destination="TAw-7e-v7W" id="y4J-JW-Qtd"/>
                 <outlet property="scrollView" destination="2MQ-qj-fo6" id="Mfp-Ig-DGw"/>
                 <outlet property="textView" destination="16S-4E-sIn" id="6uI-8Q-3vS"/>
+                <outlet property="titleLabel" destination="NjN-pl-NhF" id="RWu-a9-cbS"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -27,16 +28,25 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OfJ-rq-wb5">
-                    <rect key="frame" x="15" y="253" width="384" height="400"/>
+                    <rect key="frame" x="12" y="160" width="390" height="736"/>
                     <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Lifebox Terms &amp; Conditions of Use" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NjN-pl-NhF" userLabel="Title">
+                            <rect key="frame" x="16" y="16" width="342" height="20"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="20" id="l2Y-pL-ziI"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                         <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2MQ-qj-fo6">
-                            <rect key="frame" x="0.0" y="0.0" width="384" height="400"/>
+                            <rect key="frame" x="0.0" y="40" width="390" height="696"/>
                             <subviews>
                                 <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="tcD-wQ-E8s">
-                                    <rect key="frame" x="0.0" y="0.0" width="384" height="384"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="390" height="384"/>
                                     <subviews>
                                         <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="16S-4E-sIn" customClass="IntrinsicTextView" customModule="Billo" customModuleProvider="target">
-                                            <rect key="frame" x="0.0" y="0.0" width="384" height="329"/>
+                                            <rect key="frame" x="3" y="0.0" width="384" height="329"/>
                                             <color key="backgroundColor" name="secondaryBackground"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" priority="250" constant="329" id="dGw-Yg-DRS"/>
@@ -47,7 +57,7 @@
                                             <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                                         </textView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wJ2-y2-eJx" customClass="RoundedInsetsButton" customModule="Billo" customModuleProvider="target">
-                                            <rect key="frame" x="58" y="329" width="268" height="55"/>
+                                            <rect key="frame" x="61" y="329" width="268" height="55"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="55" id="5n0-0R-iUM"/>
                                                 <constraint firstAttribute="width" constant="268" id="A2N-Z6-NJl"/>
@@ -66,19 +76,22 @@
                             </constraints>
                         </scrollView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="wqP-EQ-bdd">
-                            <rect key="frame" x="346" y="8" width="30" height="30"/>
+                            <rect key="frame" x="344" y="16" width="30" height="30"/>
                         </button>
                     </subviews>
                     <color key="backgroundColor" name="secondaryBackground"/>
                     <constraints>
+                        <constraint firstItem="NjN-pl-NhF" firstAttribute="leading" secondItem="OfJ-rq-wb5" secondAttribute="leading" constant="16" id="42j-U0-mwb"/>
+                        <constraint firstItem="wqP-EQ-bdd" firstAttribute="trailing" secondItem="NjN-pl-NhF" secondAttribute="trailing" constant="16" id="6cH-Lc-EzN"/>
                         <constraint firstAttribute="trailing" secondItem="2MQ-qj-fo6" secondAttribute="trailing" id="9h6-Uy-A4h"/>
                         <constraint firstAttribute="width" relation="lessThanOrEqual" constant="500" id="AXg-sq-eon"/>
                         <constraint firstAttribute="height" priority="999" constant="400" id="TAw-7e-v7W"/>
-                        <constraint firstAttribute="trailing" secondItem="wqP-EQ-bdd" secondAttribute="trailing" constant="8" id="bxy-kf-IHQ"/>
+                        <constraint firstAttribute="trailing" secondItem="wqP-EQ-bdd" secondAttribute="trailing" constant="16" id="bxy-kf-IHQ"/>
                         <constraint firstAttribute="bottom" secondItem="2MQ-qj-fo6" secondAttribute="bottom" id="cRL-S6-1l2"/>
                         <constraint firstItem="2MQ-qj-fo6" firstAttribute="leading" secondItem="OfJ-rq-wb5" secondAttribute="leading" id="htt-39-NFO"/>
-                        <constraint firstItem="2MQ-qj-fo6" firstAttribute="top" secondItem="OfJ-rq-wb5" secondAttribute="top" id="thI-kM-zdT"/>
-                        <constraint firstItem="wqP-EQ-bdd" firstAttribute="top" secondItem="OfJ-rq-wb5" secondAttribute="top" constant="8" id="yY5-pe-jTr"/>
+                        <constraint firstItem="2MQ-qj-fo6" firstAttribute="top" secondItem="NjN-pl-NhF" secondAttribute="top" constant="24" id="thI-kM-zdT"/>
+                        <constraint firstItem="NjN-pl-NhF" firstAttribute="top" secondItem="OfJ-rq-wb5" secondAttribute="top" constant="16" id="vkz-hY-r0g"/>
+                        <constraint firstItem="wqP-EQ-bdd" firstAttribute="top" secondItem="OfJ-rq-wb5" secondAttribute="top" constant="16" id="yY5-pe-jTr"/>
                     </constraints>
                     <variation key="default">
                         <mask key="constraints">
@@ -95,12 +108,11 @@
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="OfJ-rq-wb5" firstAttribute="centerY" secondItem="fnl-2z-Ty3" secondAttribute="centerY" id="6oG-ej-n9n"/>
-                <constraint firstItem="OfJ-rq-wb5" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="15" id="FWv-uR-3Qt"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="OfJ-rq-wb5" secondAttribute="bottom" constant="40" id="Shu-4w-UbI"/>
+                <constraint firstItem="OfJ-rq-wb5" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="12" id="FWv-uR-3Qt"/>
+                <constraint firstAttribute="bottom" secondItem="OfJ-rq-wb5" secondAttribute="bottom" id="Shu-4w-UbI"/>
+                <constraint firstItem="OfJ-rq-wb5" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="160" id="aFu-WN-CH9"/>
                 <constraint firstItem="OfJ-rq-wb5" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="fnc-5J-LG3"/>
-                <constraint firstItem="OfJ-rq-wb5" firstAttribute="top" relation="greaterThanOrEqual" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="40" id="mBJ-Wr-yRf"/>
-                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="OfJ-rq-wb5" secondAttribute="trailing" constant="15" id="qDF-fX-jlN"/>
+                <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="OfJ-rq-wb5" secondAttribute="trailing" constant="12" id="qDF-fX-jlN"/>
                 <constraint firstItem="OfJ-rq-wb5" firstAttribute="width" secondItem="i5M-Pr-FkT" secondAttribute="width" multiplier="0.5" priority="999" id="qPN-np-MWc"/>
             </constraints>
             <variation key="default">
