--- a/Depo/Depo/Presentation/UserStories/Others/AlertFilesActionsSheet/View/AlertFilesCancelView.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/AlertFilesActionsSheet/View/AlertFilesCancelView.xib
@@ -5,13 +5,14 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="AlertFilesCancelView" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="73"/>
+            <rect key="frame" x="0.0" y="0.0" width="414" height="65"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vmi-IQ-e1c" customClass="RoundedButton" customModule="Billo" customModuleProvider="target">
@@ -36,21 +37,37 @@
                         <action selector="onCancelButton:" destination="iN0-l3-epB" eventType="touchUpInside" id="0sh-O3-FFW"/>
                     </connections>
                 </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i43-Q9-ifq">
+                    <rect key="frame" x="0.0" y="0.0" width="414" height="1"/>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="1" id="Ifh-Ki-nLE"/>
+                    </constraints>
+                </view>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="Vmi-IQ-e1c" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="8A0-YO-X37"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Vmi-IQ-e1c" secondAttribute="bottom" constant="16" id="JxT-qh-Niw"/>
+                <constraint firstItem="i43-Q9-ifq" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="F4K-RB-a6E"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="Vmi-IQ-e1c" secondAttribute="bottom" constant="8" id="JxT-qh-Niw"/>
                 <constraint firstItem="Vmi-IQ-e1c" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="OOz-k7-npX"/>
+                <constraint firstItem="i43-Q9-ifq" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="Rcn-Kx-3gX"/>
                 <constraint firstItem="Vmi-IQ-e1c" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="12" id="stK-tG-lXr"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="Vmi-IQ-e1c" secondAttribute="trailing" constant="16" id="uDD-Om-Hl7"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="i43-Q9-ifq" secondAttribute="trailing" id="zeL-HJ-vrG"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="cancelButton" destination="Vmi-IQ-e1c" id="4wD-qu-Poz"/>
+                <outlet property="seperatorView" destination="i43-Q9-ifq" id="CgK-0O-P0w"/>
             </connections>
             <point key="canvasLocation" x="105.79710144927537" y="-137.27678571428569"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
