--- a/Depo/Depo/Presentation/UserStories/Start/IdentityVerification/IdentityVerificationViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/IdentityVerification/IdentityVerificationViewController.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -24,14 +24,14 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="92"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cbb-kx-UJJ">
-                    <rect key="frame" x="16" y="20" width="382" height="21.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cbb-kx-UJJ" userLabel="Title Label">
+                    <rect key="frame" x="16" y="16" width="382" height="23.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lNj-qc-gec">
-                    <rect key="frame" x="30" y="51.5" width="354" height="20.5"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lNj-qc-gec" userLabel="Description Label">
+                    <rect key="frame" x="16" y="51.5" width="382" height="20.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -41,11 +41,11 @@
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="cbb-kx-UJJ" secondAttribute="trailing" constant="16" id="Dyh-2L-Oly"/>
                 <constraint firstAttribute="bottom" secondItem="lNj-qc-gec" secondAttribute="bottom" constant="20" id="L05-DH-oWB"/>
-                <constraint firstItem="lNj-qc-gec" firstAttribute="top" secondItem="cbb-kx-UJJ" secondAttribute="bottom" constant="10" id="LmC-cW-cOj"/>
+                <constraint firstItem="lNj-qc-gec" firstAttribute="top" secondItem="cbb-kx-UJJ" secondAttribute="bottom" constant="12" id="LmC-cW-cOj"/>
                 <constraint firstItem="cbb-kx-UJJ" firstAttribute="leading" secondItem="gfW-aZ-M3g" secondAttribute="leading" constant="16" id="TY4-H9-1qq"/>
-                <constraint firstItem="cbb-kx-UJJ" firstAttribute="top" secondItem="gfW-aZ-M3g" secondAttribute="top" constant="20" id="inx-5l-MWj"/>
-                <constraint firstItem="lNj-qc-gec" firstAttribute="leading" secondItem="gfW-aZ-M3g" secondAttribute="leading" constant="30" id="qgH-rO-5QV"/>
-                <constraint firstAttribute="trailing" secondItem="lNj-qc-gec" secondAttribute="trailing" constant="30" id="vJ3-ma-BXz"/>
+                <constraint firstItem="cbb-kx-UJJ" firstAttribute="top" secondItem="gfW-aZ-M3g" secondAttribute="top" constant="16" id="inx-5l-MWj"/>
+                <constraint firstItem="lNj-qc-gec" firstAttribute="leading" secondItem="gfW-aZ-M3g" secondAttribute="leading" constant="16" id="qgH-rO-5QV"/>
+                <constraint firstAttribute="trailing" secondItem="lNj-qc-gec" secondAttribute="trailing" constant="16" id="vJ3-ma-BXz"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <point key="canvasLocation" x="-33" y="-238"/>
@@ -59,10 +59,9 @@
                     <color key="backgroundColor" name="primaryBackground"/>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zW9-db-KC7" customClass="WhiteButtonWithRoundedCorner" customModule="Billo" customModuleProvider="target">
-                    <rect key="frame" x="104" y="416" width="206" height="44"/>
+                    <rect key="frame" x="28" y="439" width="358" height="45"/>
                     <constraints>
-                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="206" id="KI5-AF-eel"/>
-                        <constraint firstAttribute="height" constant="44" id="mrA-Ic-aSo"/>
+                        <constraint firstAttribute="height" constant="45" id="mrA-Ic-aSo"/>
                     </constraints>
                     <state key="normal" title="Button"/>
                     <connections>
@@ -73,10 +72,11 @@
             <viewLayoutGuide key="safeArea" id="Xk6-Zy-poz"/>
             <color key="backgroundColor" name="primaryBackground"/>
             <constraints>
+                <constraint firstItem="Xk6-Zy-poz" firstAttribute="trailing" secondItem="zW9-db-KC7" secondAttribute="trailing" constant="28" id="2yp-Ck-vTN"/>
+                <constraint firstItem="zW9-db-KC7" firstAttribute="leading" secondItem="Xk6-Zy-poz" secondAttribute="leading" constant="28" id="5Qa-i0-eda"/>
                 <constraint firstItem="G33-ef-bQU" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="LOP-vE-zeX"/>
-                <constraint firstItem="zW9-db-KC7" firstAttribute="top" secondItem="G33-ef-bQU" secondAttribute="bottom" constant="16" id="M8c-CW-es4"/>
+                <constraint firstItem="zW9-db-KC7" firstAttribute="top" secondItem="G33-ef-bQU" secondAttribute="bottom" constant="39" id="M8c-CW-es4"/>
                 <constraint firstAttribute="trailing" secondItem="G33-ef-bQU" secondAttribute="trailing" id="WTR-kI-uCv"/>
-                <constraint firstItem="zW9-db-KC7" firstAttribute="centerX" secondItem="Xk6-Zy-poz" secondAttribute="centerX" id="Zha-3K-05X"/>
                 <constraint firstItem="zW9-db-KC7" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="Xk6-Zy-poz" secondAttribute="leading" constant="16" id="evK-3E-kUz"/>
                 <constraint firstItem="Xk6-Zy-poz" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="zW9-db-KC7" secondAttribute="trailing" constant="16" id="mGy-xD-Nur"/>
                 <constraint firstItem="G33-ef-bQU" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="tBA-f0-Ga5"/>
